demoshop_restAPIvsReact/src/main/java/com/example/demo/error/enums/ResponseCode.java
package com.example.demo.error.enums;

public interface ResponseCode {
}
